apps/workspaces/workspaces-api/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspaces-api
  namespace: workspaces-prod
  labels:
    app.kubernetes.io/part-of: workspaces
spec:
  selector:
    app: workspaces-api
  ports:
    - name: http
      port: 8080
      targetPort: http
